--- a/index.html
+++ b/index.html
@@ -1,327 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>Rhey Ann Magcalas Resume</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Aldrich" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Armata" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
-
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/fontawesome/all.css">
+  <meta charset="UTF-8">
+  <title>Página de prueba<title>
 </head>
 <body>
-
-  <div class="container-fluid banner">
-      <div class=" row">
-        <div class="col-sm-12"">
-          <h1 class="name">Rhey Ann Magcalas</h1>      
-          <h2>Web Developer/Data Engineer</h2>
-        </div>
-      </div>
-      <div class=" row">
-        <div class="col-sm-2">
-          <div class=" row">
-            <div class="col-sm-2">
-               <a href="https://www.linkedin.com/in/rhey-magcalas-47541490/" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
-            </div>
-            <div class="col-sm-2">
-              <a href="https://github.com/rheyannmagcalas/" target="_blank"><i class="fa fa-github fa-lg"></i></a>
-            </div>
-            <div class="col-sm-2">
-              <a href="skype:magcalasrheyann?chat" target="_blank"><i class="fa fa-skype fa-lg"></i></a>
-            </div>
-            <div class="col-sm-2">
-              <a href="mailto:magcalasrheyann@gmail.com" target="_blank"><i class="fa fa-envelope fa-lg"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class=" row">
-        <div class="col-sm-12">
-          <button type="button" class="btn btn-danger float-right">DOWNLOAD MY RESUME</button>
-        </div>
-      </div>
-  </div>
-
-  <div class="info container-fluid">
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="row">
-          <div class="col-sm-12 mt-5">
-            <h2>ABOUT ME</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12">
-            <p class="mt-4">I am a skilled-IT professional who exhibits expertise in building web application and software solutions to simplify tasks.  I am passionate in everything I do and always give my 100%. When I undertake a project,
-            I would go the extra mile and make it better than expected. </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12 mt-5">
-            <h2>PERSONAL INFORMATION:</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-4 mt-2">
-            <h4>Location:</h4>
-          </div>
-          <div class="col-sm-8 mt-2">
-            <p>Philippines</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Date of Birth:<h4>
-          </div>
-          <div class="col-sm-8">
-            <p>December 15, 1993</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Email Address:</h4>
-          </div>
-          <div class="col-sm-8">
-            <p>magcalasrheyann@gmail.com</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Mobile Number:</h4>
-          </div>
-          <div class="col-sm-8">
-            <p>(+639) 159438825</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Language:</h4>
-          </div>
-          <div class="col-sm-8">
-            <p>Filipino, English</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12 mt-5">
-            <h2>SKILLS</h2>
-          </div>
-
-          <div class="col-sm-12 mt-3">
-            <h3>PROGRAMMING LANGUAGES</h4>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-2">
-            <h4>Python:</h4>
-          </div>
-          <div class="col-sm-3 mt-2">
-            <p>Django, Flask</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-2">
-            <h4>PHP:</h4>
-          </div>
-          <div class="col-sm-4 mt-2">
-            <p>Codeigniter, Laravel</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-2">
-            <h4>Javascript:</h4>
-          </div>
-          <div class="col-sm-4 mt-2">
-            <p>Jquery, Leaflet, D3</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-2">
-            <h4>Java</h4>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-5 mt-3">
-            <h3>Databases:</h3>
-          </div>
-          <div class="col-sm-7 mt-3">
-            <p>MYSQL, SQL, Elasticsearch, Redis, Riak</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-5 mt-2">
-            <h3>Version Control:</h3>
-          </div>
-          <div class="col-sm-7 mt-2">
-            <p>Git, Perforce, SVN Tortoise</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-5 mt-2">
-            <h3>Messaging/Task Queue:</h3>
-          </div>
-          <div class="col-sm-7 mt-2">
-            <p>Kafka, Rabbitmq, Celery</p>
-          </div>
-        </div>
-
-         <div class="row">
-          <div class="col-sm-5 mt-2">
-            <h3>Provisioning:</h3>
-          </div>
-          <div class="col-sm-7 mt-2">
-            <p>Vagrant, Ansible, Docker</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-5 mt-2">
-            <h3>ETL Tools:</h3>
-          </div>
-          <div class="col-sm-7 mt-2">
-            <p>Streamsets, Airflow</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-5 mt-2">
-            <h3>Visualization:</h3>
-          </div>
-          <div class="col-sm-7 mt-2">
-            <p>Kibana</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-12 mt-5">
-            <h2>TRAININGS AND CERTIFICATIONS:</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-12 mt-1">
-            <ul class="mt-3">
-              <li><p>Information Technology Infrastracture Library (ITIL) Training and Certification</p></li>
-              <li><p>Basic Machine Learning Bootcamp</p></li>
-              <li><p>Basic Python</p></li>
-              <li><p>Effective Workplace Writing</p></li>
-            </ul> 
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-8" style="background-color:#F0F0F0;">
-        <div class="row">
-          <div class="col-sm-12 mt-5">
-            <h2 style="color:#505050;">WORKING EXPERIENCE</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-2">
-            <p><i>July 2018-Present</i></p>
-          </div>
-          <div class="col-sm-10 mt-2">
-            <h4 style="color:#984843">Operation Software Tools Developer</h4>
-            <p>Ringcentral - Shaw Blvd, Mandaluyong, Metro Manila, Philippines</p>
-            <ul class="mt-3">
-              <li><p>Build, maintain and update tools which may be standalone or web-enabled.</p></li>
-              <li><p>Conduct development, test and implementation of software following functional requirement and technical design documents.</p></li>
-              <li><p>Conduct testing  and monitoring of automated systems.</p></li>
-              <li><p>Research new and emerging technology to improve technical skills.</p></li>
-              <li><p>Analyzing Data</p></li>
-            </ul> 
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-2">
-            <p><i>Feb 2018-Jun 2018</i></p>
-          </div>
-          <div class="col-sm-10 mt-2">
-            <h4 style="color:#984843">Software Engineer</h4>
-            <p>Ringcentral - Makati City,  Philippines</p>
-            <ul class="mt-3">
-                <li><p>System support and development of existing application</p></li>
-                <li><p>Development of change request and enhancement requested by clients</p></li>
-              </ul> 
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-2">
-            <p><i>March 2015-Jan 2018</i></p>
-          </div>
-          <div class="col-sm-10 mt-2">
-            <h4 style="color:#984843">Solution Efficiency Engineer</h4>
-            <p>Trend Micro – Ortigas Ave., Pasig City, Philippines</p>
-            <ul class="mt-3">
-                <li><p>Build, maintain and update tools which may be standalone or web-enabled.</p></li>
-                <li><p>Conduct development, test and implementation of software following functional requirement and technical design documents.</p></li>
-                <li><p>Conduct testing  and monitoring of automated systems.</p></li>
-                <li><p>Research new and emerging technology to improve technical skills.</p></li>
-            </ul> 
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-2">
-            <p><i>Feb 2014-March 2015</i></p>
-          </div>
-          <div class="col-sm-10 mt-2">
-            <h4 style="color:#984843">Web Developer</h4>
-            <p>Prople Inc. – Pioneer St., Mandaluyong City, Philippines </p>
-            <ul class="mt-3">
-                <li><p>System support and development of existing application</p></li>
-                <li><p>Development of change request and enhancement requested by clients</p></li>
-            </ul> 
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-2">
-            <p><i>Nov 2013-Feb 2014</i></p>
-          </div>
-          <div class="col-sm-10 mt-2">
-            <h4 style="color:#984843">Web Developer - Trainee</h4>
-            <p>Prople Inc. – Pioneer St., Mandaluyong City, Philippines </p>
-            <ul class="mt-3">
-                <li><p>Working alongside the senior web developer to deliver optimum performance of clients’ websites</p></li>
-            </ul> 
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-12 mt-5">
-            <h2 style="color:#505050;">AWARDS AND RECOGNITIONS</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-2">
-            <p><i>1H 2016</i></p>
-          </div>
-          <div class="col-sm-10 mt-2">
-            <h4 style="color:#984843">WRS Employee of the Quarter</h4>
-            <p>Trend Micro Philippines - Ortigas, Pasig City </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-2 mt-3">
-            <p><i>1H 2017</i></p>
-          </div>
-          <div class="col-sm-10 mt-3">
-            <h4 style="color:#984843">WRS Employee of the Quarter</h4>
-            <p>Trend Micro Philippines - Ortigas, Pasig City </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <h1>Hola amiguitos!</h1>
+  <footer>gpuma 2017</footer>
 </body>
 </html>
