--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           </div>
         </div>
       </div>
-      <div class=" row">
+      <!-- <div class=" row">
         <div class="col-sm-12">
           <button type="button" class="btn btn-danger float-right">DOWNLOAD MY RESUME</button>
         </div>
-      </div>
+      </div> -->
   </div>
 
   <div class="info container-fluid">
@@ -117,15 +117,15 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-2 mt-2">
+          <div class="col-sm-4 mt-2">
             <h4>Python:</h4>
           </div>
-          <div class="col-sm-3 mt-2">
+          <div class="col-sm-4 mt-2">
             <p>Django, Flask</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-2 mt-2">
+          <div class="col-sm-4 mt-2">
             <h4>PHP:</h4>
           </div>
           <div class="col-sm-4 mt-2">
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-2 mt-2">
+          <div class="col-sm-4 mt-2">
             <h4>Javascript:</h4>
           </div>
           <div class="col-sm-4 mt-2">
@@ -141,60 +141,60 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-2 mt-2">
+          <div class="col-sm-4 mt-2">
             <h4>Java</h4>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-5 mt-3">
+          <div class="col-sm-4 mt-3">
             <h3>Databases:</h3>
           </div>
-          <div class="col-sm-7 mt-3">
+          <div class="col-sm-8 mt-3">
             <p>MYSQL, SQL, Elasticsearch, Redis, Riak</p>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-sm-5 mt-2">
+          <div class="col-sm-4 mt-2">
             <h3>Version Control:</h3>
           </div>
-          <div class="col-sm-7 mt-2">
+          <div class="col-sm-8 mt-2">
             <p>Git, Perforce, SVN Tortoise</p>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-sm-5 mt-2">
+          <div class="col-sm-4 mt-2">
             <h3>Messaging/Task Queue:</h3>
           </div>
-          <div class="col-sm-7 mt-2">
+          <div class="col-sm-8 mt-2">
             <p>Kafka, Rabbitmq, Celery</p>
           </div>
         </div>
 
          <div class="row">
-          <div class="col-sm-5 mt-2">
+          <div class="col-sm-4 mt-2">
             <h3>Provisioning:</h3>
           </div>
-          <div class="col-sm-7 mt-2">
+          <div class="col-sm-8 mt-2">
             <p>Vagrant, Ansible, Docker</p>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-sm-5 mt-2">
+          <div class="col-sm-4 mt-2">
             <h3>ETL Tools:</h3>
           </div>
-          <div class="col-sm-7 mt-2">
+          <div class="col-sm-8 mt-2">
             <p>Streamsets, Airflow</p>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-sm-5 mt-2">
+          <div class="col-sm-4 mt-2">
             <h3>Visualization:</h3>
           </div>
-          <div class="col-sm-7 mt-2">
+          <div class="col-sm-8 mt-2">
             <p>Kibana</p>
           </div>
         </div>
@@ -224,26 +224,27 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-2 mt-2">
+          <div class="col-sm-3 mt-4">
             <p><i>July 2018-Present</i></p>
           </div>
-          <div class="col-sm-10 mt-2">
+          <div class="col-sm-9 mt-4">
             <h4 style="color:#984843">Operation Software Tools Developer</h4>
             <p>Ringcentral - Shaw Blvd, Mandaluyong, Metro Manila, Philippines</p>
             <ul class="mt-3">
               <li><p>Build, maintain and update tools which may be standalone or web-enabled.</p></li>
-              <li><p>Conduct development, test and implementation of software following functional requirement and technical design documents.</p></li>
-              <li><p>Conduct testing  and monitoring of automated systems.</p></li>
+              <li><p>Conduct development, test implementation and monitoring of software following functional requirement and technical design documents.</p></li>
               <li><p>Research new and emerging technology to improve technical skills.</p></li>
-              <li><p>Analyzing Data</p></li>
+              <li><p>Process Data (analyzing, construct, test and maintain).</p></li>
+              <li><p>Explore and examine data to find hidden patterns.</p></li>
+              <li><p>Describe stories around the data based on the analysis.</p></li>
             </ul> 
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-2 mt-2">
+          <div class="col-sm-3 mt-2">
             <p><i>Feb 2018-Jun 2018</i></p>
           </div>
-          <div class="col-sm-10 mt-2">
+          <div class="col-sm-9 mt-2">
             <h4 style="color:#984843">Software Engineer</h4>
             <p>Ringcentral - Makati City,  Philippines</p>
             <ul class="mt-3">
@@ -253,10 +254,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-2 mt-2">
+          <div class="col-sm-3 mt-2">
             <p><i>March 2015-Jan 2018</i></p>
           </div>
-          <div class="col-sm-10 mt-2">
+          <div class="col-sm-9 mt-2">
             <h4 style="color:#984843">Solution Efficiency Engineer</h4>
             <p>Trend Micro – Ortigas Ave., Pasig City, Philippines</p>
             <ul class="mt-3">
@@ -268,10 +269,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-2 mt-2">
+          <div class="col-sm-3 mt-2">
             <p><i>Feb 2014-March 2015</i></p>
           </div>
-          <div class="col-sm-10 mt-2">
+          <div class="col-sm-9 mt-2">
             <h4 style="color:#984843">Web Developer</h4>
             <p>Prople Inc. – Pioneer St., Mandaluyong City, Philippines </p>
             <ul class="mt-3">
@@ -281,10 +282,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-2 mt-2">
+          <div class="col-sm-3 mt-2">
             <p><i>Nov 2013-Feb 2014</i></p>
           </div>
-          <div class="col-sm-10 mt-2">
+          <div class="col-sm-9 mt-2">
             <h4 style="color:#984843">Web Developer - Trainee</h4>
             <p>Prople Inc. – Pioneer St., Mandaluyong City, Philippines </p>
             <ul class="mt-3">
