Add Particles Background

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 </head>
 <body>
 
-  <div class="container-fluid banner">
-      <div class=" row">
-        <div class="col-sm-12"">
+  <div class="container-fluid main-banner" >
+    <div id="particles-js">
+      <div class="row banner-name" >
+        <div class="col-sm-12" >
           <h1 class="name">Rhey Ann Magcalas</h1>      
           <h2>Web Developer/Data Engineer</h2>
         </div>
       </div>
-      <div class=" row">
-        <div class="col-sm-2">
-          <div class=" row">
+      <div class="row banner">
+        <div class="col-sm-12">
+          <div class="row">
             <div class="col-sm-2">
                <a href="https://www.linkedin.com/in/rhey-magcalas-47541490/" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
             </div>
@@ -40,6 +41,7 @@
           </div>
         </div>
       </div>
+    </div>
       <!-- <div class=" row">
         <div class="col-sm-12">
           <button type="button" class="btn btn-danger float-right">DOWNLOAD MY RESUME</button>
@@ -320,5 +322,8 @@
       </div>
     </div>
   </div>
+
+<script type="text/javascript" src="js/particles.js"></script>
+<script type="text/javascript" src="js/init_particles.js"></script>
 </body>
 </html>
