--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="row banner-name" >
         <div class="col-sm-12" >
           <h1 class="name">Rhey Ann Magcalas</h1>      
-          <h2>Web Developer/Data Engineer</h2>
+          <h2>Web Developer and Data Engineer</h2>
         </div>
         <div class="col-sm-12 banner">
                <a href="https://www.linkedin.com/in/rhey-magcalas-47541490/" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
@@ -110,24 +110,7 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-sm-12 mt-5">
-            <h2>STRENGTHS FINDER RESULT:</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-10">
-            <ul style="font-size:12px">
-              <li>Achiever</li>
-              <li>Harmony</li>
-              <li>Responsibility</li>
-              <li>Learner</li>
-              <li>Analytical</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row">
+        <div class="row mt-4">
           <div class="col-sm-12 mt-4">
             <h2>TRAININGS & CERTIFICATIONS:</h2>
           </div>
@@ -182,7 +165,7 @@
           <div class="col-sm-12 mt-5">
             <nav class="nav nav-tabs nav-justified">
               <a class="nav-item nav-link active" data-toggle="tab" href="#experience">Working Experience</a>
-              <a class="nav-item nav-link" data-toggle="tab" href="#skills">Skills</a>
+              <a class="nav-item nav-link" data-toggle="tab" href="#skills">Skills and Education</a>
             </nav>
           </div>
         </div>
@@ -283,7 +266,7 @@
           </div>
           <div class="tab-pane container fade" id="skills">
              <div class="row">
-                <div class="col-lg-6 col-md-6 col-xs-6 mt-5">
+                <div class="col-lg-4 col-md-4 col-xs-12 mt-5">
                     <div class="col-lg-12 col-md-12 col-xs-12">
                       <h4 style="color:#984843; font-size:14px; align: center">Programming Languages and Frameworks:</h4>
                       <ul class="mt-2">
@@ -295,7 +278,7 @@
                       </ul>
                     </div>
                 </div>
-               <div class="col-lg-6 col-md-6 col-xs-6 mt-5">
+               <div class="col-lg-4 col-md-4 col-xs-12 mt-5">
                     <div class="col-lg-12 col-md-12 col-xs-12">
                       <h4 style="color:#984843; font-size:14px; align: center">Databases:</h4>
                       <ul class="mt-2">
@@ -304,10 +287,22 @@
                         <li><p>Redis</p></li>
                         <li><p>Riak</p></li>
                         <li><p>Hive, Impala</p></li>
+                        <li><p>MongoDB</p></li>
                       </ul>
                     </div>
+               </div>
+               <div class="col-lg-4 col-md-4 col-xs-12 mt-5">
+                <div class="col-lg-12 col-md-12 col-xs-12">
+                  <h4 style="color:#984843; font-size:14px; align: center">ETL Tools:</h4>
+                  <ul class="mt-2">
+                    <li><p>Streamsets</li>
+                    <li><p>Airflow</p></li>
+                    <li><p>Prefect</p></li>
+                    <li><p>Dask</p></li>
+                    <li><p>Jupyter Notebook</p></li>
+                </ul>
                 </div>
-
+              </div>
              </div>
             <div class="row mt-3">
                 <div class="col-lg-4 col-md-4 col-xs-4">
@@ -340,29 +335,6 @@
                       </ul>
                     </div>
                  </div>
-            </div>
-            <div class="row mt-3">
-              <div class="col-lg-4 col-md-4 col-xs-4">
-                <div class="col-lg-12 col-md-12 col-xs-12">
-                  <h4 style="color:#984843; font-size:14px; align: center">ETL Tools:</h4>
-                  <ul class="mt-2">
-                    <li><p>Streamsets</li>
-                    <li><p>Airflow</p></li>
-                    <li><p>Prefect</p></li>
-                    <li><p>Dask</p></li>
-                    <li><p>Jupyter Notebook</p></li>
-                </ul>
-                </div>
-              </div>
-              <div class="col-lg-6 col-md-6 col-xs-6">
-                <div class="col-lg-12 col-md-12 col-xs-12">
-                  <h4 style="color:#984843; font-size:14px; align: center">Machine Learning:</h4>
-                  <ul class="mt-2">
-                    <li><p>Scikit-Learn</li>
-                    <li><p><b>Types:</b>  Supervised Classification and Regression</p></li>
-                </ul>
-                </div>
-              </div>
             </div>
           </div>
         </div>
