--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         </div>
       </div>
     </div>
-      <!-- <div class=" row">
+    <div class=" row">
         <div class="col-sm-12">
-          <button type="button" class="btn btn-danger float-right">DOWNLOAD MY RESUME</button>
+          <button type="button" class="btn btn-danger float-right" >
+            <a href="/images/rheyannmagcalas_resume.pdf" target="_blank">
+            DOWNLOAD MY RESUME</a></button>
         </div>
-      </div> -->
+    </div>
   </div>
 
   <div class="info container-fluid">
@@ -165,7 +167,7 @@
           <div class="col-sm-12 mt-5">
             <nav class="nav nav-tabs nav-justified">
               <a class="nav-item nav-link active" data-toggle="tab" href="#experience">Working Experience</a>
-              <a class="nav-item nav-link" data-toggle="tab" href="#skills">Skills and Education</a>
+              <a class="nav-item nav-link" data-toggle="tab" href="#skills">Skills</a>
             </nav>
           </div>
         </div>
