--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="row banner-name" >
         <div class="col-sm-12" >
           <h1 class="name">Rhey Ann Magcalas</h1>      
-          <h2>Web Developer and Data Engineer</h2>
+          <h2>Senior Software Engineer</h2>
         </div>
         <div class="col-sm-12 banner">
                <a href="https://www.linkedin.com/in/rhey-magcalas-47541490/" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
@@ -119,7 +119,6 @@
           <div class="col-lg-12 col-md-12 col-sm-12">
             <ul style="font-size:12px" class="mt-3">
               <li><p>Information Technology Infrastracture Library (ITIL) Training and Certification</p></li>
-              <li><p>Basic Machine Learning Bootcamp</p></li>
               <li><p>Basic Python</p></li>
               <li><p>Effective Workplace Writing</p></li>
               <li><p>Empowerment of the Black-Belt Team</p></li>
@@ -178,20 +177,11 @@
                   <p><i>July 2018-Present</i></p>
                 </div>
                 <div class="col-sm-9 mt-4">
-                  <h4 style="color:#984843">Operation Software Tools Developer</h4>
+                  <h4 style="color:#984843">Senior Software Engineer</h4>
                   <p>Ringcentral - Shaw Blvd, Mandaluyong, Metro Manila, Philippines</p>
-
-                  <p class="mt-3">As a Data Engineer:</p>
                   <ul>
-                    <li><p>Manage all data pipelines, data architecture and data consistency/quality/reliability.</p></li>
-                    <li><p>Research new and emerging technology to improve data reliability, efficiency and quality and improve the current architecture</p></li>
                     <li><p>Automation of deployment, configuration, alarming and visualization</p></li>
                     <li><p>Data modeling, mining, production and explore and examine data to find hidden patterns</p></li>
-                    <li><p>Use sophisticated analytics programs, machine learning and statistical methods to to prepare data for use in predictive modeling</p></li>
-                  </ul>
-
-                  <p class="mt-3">As a Web Developer:</p>
-                  <ul>
                     <li><p>Build, maintain and update tools which may be standalone or web-enabled.</p></li>
                     <li><p>Conduct planning, development, test and implementation of software request from the client.</p></li>
                     <li><p>Monitoring and Support for the Existing Sites.</p></li>
@@ -267,8 +257,8 @@
             </div>
           </div>
           <div class="tab-pane container fade" id="skills">
-             <div class="row">
-                <div class="col-lg-4 col-md-4 col-xs-12 mt-5">
+             <div class="row mt-4">
+              <div class="col-lg-4 col-md-4 col-xs-4">
                     <div class="col-lg-12 col-md-12 col-xs-12">
                       <h4 style="color:#984843; font-size:14px; align: center">Programming Languages and Frameworks:</h4>
                       <ul class="mt-2">
@@ -280,7 +270,7 @@
                       </ul>
                     </div>
                 </div>
-               <div class="col-lg-4 col-md-4 col-xs-12 mt-5">
+                <div class="col-lg-2 col-md-2 col-xs-2">
                     <div class="col-lg-12 col-md-12 col-xs-12">
                       <h4 style="color:#984843; font-size:14px; align: center">Databases:</h4>
                       <ul class="mt-2">
@@ -288,12 +278,20 @@
                         <li><p>Elasticsearch</p></li>
                         <li><p>Redis</p></li>
                         <li><p>Riak</p></li>
-                        <li><p>Hive, Impala</p></li>
-                        <li><p>MongoDB</p></li>
                       </ul>
                     </div>
                </div>
-               <div class="col-lg-4 col-md-4 col-xs-12 mt-5">
+               <div class="col-lg-3 col-md-3 col-xs-3">
+                <div class="col-lg-12 col-md-12 col-xs-12">
+                  <h4 style="color:#984843; font-size:14px; align: center"></h4>
+                  <ul class="mt-2">
+                    <li><p>Hadoop</p></li>
+                    <li><p>MongoDB</p></li>
+                    <li><p>Spark</p></li>
+                  </ul>
+                </div>
+           </div>
+               <div class="col-lg-3 col-md-3 col-xs-3">
                 <div class="col-lg-12 col-md-12 col-xs-12">
                   <h4 style="color:#984843; font-size:14px; align: center">ETL Tools:</h4>
                   <ul class="mt-2">
@@ -301,13 +299,12 @@
                     <li><p>Airflow</p></li>
                     <li><p>Prefect</p></li>
                     <li><p>Dask</p></li>
-                    <li><p>Jupyter Notebook</p></li>
                 </ul>
                 </div>
               </div>
              </div>
             <div class="row mt-3">
-                <div class="col-lg-4 col-md-4 col-xs-4">
+              <div class="col-lg-3 col-md-3 col-xs-3">
                   <div class="col-lg-12 col-md-12 col-xs-12">
                       <h4 style="color:#984843; font-size:14px; align: center">Message Queue:</h4>
                       <ul class="mt-2">
@@ -327,7 +324,18 @@
                       </ul>
                     </div>
                  </div>
-                <div class="col-lg-4 col-md-4 col-xs-4">
+                 <div class="col-lg-3 col-md-3 col-xs-3">
+                    <div class="col-lg-12 col-md-12 col-xs-12">
+                    <h4 style="color:#984843; font-size:14px; align: center">Visualization</h4>
+                      <ul class="mt-2">
+                        <li><p>Kibana</p></li>
+                        <li><p>Streamlit</p></li>
+                        <li><p>Seaborn</p></li>
+                        <li><p>Bokeh</p></li>
+                      </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-xs-3">
                     <div class="col-lg-12 col-md-12 col-xs-12">
                     <h4 style="color:#984843; font-size:14px; align: center">Provisioning:</h4>
                       <ul class="mt-2">
