--- a/index.html
+++ b/index.html
@@ -206,7 +206,13 @@
                         <li>
                             <span class="fa-li"></span>
                             <span class="fa-li"><i class="fas fa-tasks text-warning"></i></span>
-                            <a href="#">Identifying Existing Non Cancer Generic Drugs through AI Technology </a>
+                            <a href="https://omdena.com/projects/ai-cancer/" target="_blank">Identifying Existing Non Cancer Generic Drugs through AI Technology </a>
+                        </li>
+                        <li>
+                            <span class="fa-li"></span>
+                            <span class="fa-li"><i class="fas fa-tasks text-warning"></i></span>
+                            <a href="https://omdena.com/projects/ai-human-rights/" target="_blank">
+                                Identifying & Monitoring Human Rights Abuses Through NLP Language Models </a>
                         </li>
                     </ul>
                     <br>
