--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/rhey-ann-magcalas-47541490/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/rheyannmagcalas" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="images/RheyAnn_Magcalas.pdf" target="_blank" alt="resume"><i class="fas fa-file"></i></a>
                     </div>
                 </div>
             </section>
