Updated About me

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                     <h3>About Me</h3>
                     
-                    <p class="lead mb-3">About Me
+                    <p class="lead mb-3">
                         Seasoned Data Engineer with over a decade of experience. Expert in Python, StreamSets, and Matillion for data sourcing and ETL. Specialized in real-time data streaming with PySpark, Kafka, and Kinesis. 
                     </p>
                     <h3>Expertise</h3>
